Aggiunto ETL Fontane -> geojson

--- a/ETL_Punti_di_interesse.ipynb
+++ b/ETL_Punti_di_interesse.ipynb
@@ -13,7 +13,7 @@
    "id": "b80e93a3",
    "metadata": {},
    "source": [
-    "### ETL Municipi"
+    "### Municipi"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "id": "bb451ef2",
    "metadata": {},
    "source": [
-    "### ETL PARCHI"
+    "### PARCHI"
    ]
   },
   {
@@ -100,6 +100,32 @@
     "    \n",
     "with open(PATH_PARCHI_SHP_JSON, 'w') as file:\n",
     "    json.dump(file_json, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fad5fee3",
+   "metadata": {},
+   "source": [
+    "### Fontane"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66bcd62a",
+   "metadata": {},
+   "source": [
+    "Carichiamo Raw csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "033ad7d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   }
  ],
