--- a/ETL_Punti_di_interesse.ipynb
+++ b/ETL_Punti_di_interesse.ipynb
@@ -120,12 +120,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "033ad7d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver CSV does not support open option SEP\n",
+      "  return ogr_read(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "PATH_FONTANE_RAW = \"./Data/Raw/Punti_di_interesse/fontane.csv\"\n",
+    "df = gpd.read_file(PATH_FONTANE_RAW, sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f841ce55",
+   "metadata": {},
+   "source": [
+    "Ridenominazione colonne"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5918b153",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "df = df.rename(columns = {'objectID':'id_fontane',\n",
+    "                           'MUNICIPIO':'municipio',\n",
+    "                           'ID_NIL': 'id_nome',\n",
+    "                           'NIL': \"nome\",\n",
+    "                           'LONG_X_4326':'longitudine',\n",
+    "                           'LAT_Y_4326': 'latitudine',\n",
+    "                           'Location':'location'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b1dbc70",
+   "metadata": {},
+   "source": [
+    "Aggiunta icona per visualizzazione su kepler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a98e041b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['icon'] = \"events\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82fb78d8",
+   "metadata": {},
+   "source": [
+    "Conversione da csv a geojson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f1c726c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geojson = {\n",
+    "    \"type\": \"FeatureCollection\",\n",
+    "    \"name\": \"\",\n",
+    "    \"crs\": {\n",
+    "        \"type\": \"name\",\n",
+    "        \"properties\": {\n",
+    "            \"name\": \"urn:ogc:def:crs:EPSG::6707\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"features\": []\n",
+    "}\n",
+    "geojson[\"name\"] = \"Fontane\"\n",
+    "for i in df.index:\n",
+    "    feature = {\n",
+    "        \"type\": \"Feature\",\n",
+    "        \"properties\": {},\n",
+    "        \"geometry\": {\n",
+    "            \"type\": \"\",\n",
+    "            \"coordinates\": []\n",
+    "            }\n",
+    "        }\n",
+    "    for j in df.columns:\n",
+    "        if j == \"location\":\n",
+    "            feature[\"geometry\"][\"type\"] = \"Point\"\n",
+    "            coordinates = df.at[i, j].strip(\"(\").strip(\")\").strip().split(\",\")\n",
+    "            feature[\"geometry\"][\"coordinates\"].append(float(coordinates[1]))\n",
+    "            feature[\"geometry\"][\"coordinates\"].append(float(coordinates[0]))\n",
+    "        else:\n",
+    "            feature[\"properties\"][j] = df.at[i, j]\n",
+    "    geojson[\"features\"].append(feature)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14ba8c6d",
+   "metadata": {},
+   "source": [
+    "Salviamo geojson in Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "48656c49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "PATH_FONTANE_GEOJSON = \"./Data/Clean/Punti_di_interesse/fontane.geojson\"\n",
+    "with open(PATH_FONTANE_GEOJSON, 'w') as file:\n",
+    "    json.dump(geojson, file, indent=4)"
    ]
   }
  ],
