implementazione New Inquinamento

--- a/ETL_Inquinanto.ipynb
+++ b/ETL_Inquinanto.ipynb
@@ -18,18 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4bf8a0df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Scraping progress...: 100%|██████████| 365/365 [02:57<00:00,  2.62it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
     "import json\n",
@@ -108,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d8536d65",
    "metadata": {},
    "outputs": [],
@@ -128,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f962b010",
    "metadata": {},
    "outputs": [],
@@ -161,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cf67ac33",
    "metadata": {},
    "outputs": [],
@@ -190,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5bf3eb56",
    "metadata": {},
    "outputs": [],
@@ -218,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7e52de72",
    "metadata": {},
    "outputs": [],
@@ -267,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6c0a6399",
    "metadata": {},
    "outputs": [],
@@ -411,35 +403,198 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "517cd5ee",
+   "cell_type": "markdown",
+   "id": "cb69a02b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "PATH_NUOVO_INQUINAMENTO = \"./Data/Raw/Inquinamento/nuovo_inquinamento.csv\"\n",
-    "df = pd.read_csv(PATH_NUOVO_INQUINAMENTO)\n",
-    "\n",
-    "df = df.sort_values(\"time\")\n",
-    "df.head()"
+    "## Scraping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09ec67ee",
+   "metadata": {},
+   "source": [
+    "Otteniamo gli id delle stazioni di Milano"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c6f47ae2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "\n",
-    "URL = \"https://airnet.waqi.info/airnet/validator/check/66889\"\n",
-    "payload = {\"data\": {\"stats\": {\"periods\": [\"2025-07-01T10:00:00+01:00\",\"2025-07-19T10:00:00+01:00\"]} }}\n",
-    "risposta = requests.get(URL, params=payload)\n",
+    "URL = \"https://airnet.waqi.info/airnet/validator/check/112273\"\n",
+    "risposta = requests.get(URL)\n",
     "risposta_json = risposta.json()\n",
-    "risposta_json"
+    "neighbors = risposta_json[\"data\"][\"neighbors\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c909b97",
+   "metadata": {},
+   "source": [
+    "inizializziamo il geojson con id e coordinate delle stazioni"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78cac211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geojson = {\n",
+    "    \"type\": \"FeatureCollection\",\n",
+    "    \"name\": \"Inquinamento\",\n",
+    "    \"crs\": {\n",
+    "        \"type\": \"name\",\n",
+    "        \"properties\": {\n",
+    "            \"name\": \"urn:ogc:def:crs:EPSG::6707\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"features\": []\n",
+    "}\n",
+    "for geo, id in zip(neighbors[\"geos\"], neighbors[\"ids\"]):\n",
+    "    if not id == 353767: # Stazione marco emme, Milan, Italy che non contiene dati pm10 e pm25\n",
+    "        geojson[\"features\"].append(\n",
+    "            {\n",
+    "                \"type\": \"Feature\",\n",
+    "                \"properties\": {\n",
+    "                    \"id\": id,\n",
+    "                    \"longitudine\": geo[1],\n",
+    "                    \"latitudine\": geo[0],\n",
+    "                    \"name\": \"\",\n",
+    "                    \"pm10\": [],\n",
+    "                    \"pm25\": []\n",
+    "                },\n",
+    "                \"geometry\": {\n",
+    "                    \"type\": \"Point\",\n",
+    "                    \"coordinates\": [geo[1], geo[0]]\n",
+    "                }\n",
+    "            }\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68c3b0e2",
+   "metadata": {},
+   "source": [
+    "Estraiamo i dati di ogni stazione (per i 2 inquinanti) e li inseriamo direttamente tra le \"features\" >> \"properties\" del geojson inizializzato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f2598976",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping progress...:   6%|▌         | 22/365 [00:32<08:28,  1.48s/it]\n",
+      "Scraping progress...: 100%|██████████| 19/19 [00:57<00:00,  3.22s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "from sseclient import SSEClient\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "pbar = tqdm(total=len(geojson[\"features\"]), desc=\"Scraping progress...\")\n",
+    "\n",
+    "for feature in geojson[\"features\"]:\n",
+    "    for inquinante in [\"pm10\", \"pm25\"]:\n",
+    "        url = f\"https://airnet.waqi.info/airnet/sse/historic/daily/{feature[\"properties\"][\"id\"]}?specie={inquinante}\"\n",
+    "        response = requests.get(url, params={\"specie\": inquinante}, headers={\"Accept\": \"text/event-stream\"}, stream=True)\n",
+    "        client = SSEClient(response)\n",
+    "        for i, event in enumerate(client.events()):\n",
+    "            if event.event != \"error\":\n",
+    "                try:\n",
+    "                    data = json.loads(event.data)\n",
+    "                    if i == 0:\n",
+    "                        feature[\"properties\"][\"name\"] = data[\"meta\"][\"name\"]\n",
+    "                    elif isinstance(data, dict): #Ogni tanto ci sono righe sporche di stringhe\n",
+    "                        feature[\"properties\"][inquinante].append(data)\n",
+    "                except json.JSONDecodeError:\n",
+    "                    print(\"Errore JSON:\", event.data)\n",
+    "    pbar.update(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "549c8257",
+   "metadata": {},
+   "source": [
+    "salvo il file geojson creato in Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "548c45d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_INQUINAMENTO_GEOJSON_STAGING = \"./Data/Raw/Inquinamento/inquinamento_staging.geojson\"\n",
+    "with open(PATH_INQUINAMENTO_GEOJSON_STAGING, 'w') as file:\n",
+    "    json.dump(geojson, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec3db842",
+   "metadata": {},
+   "source": [
+    "## Elaborazione dati"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3e11d59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "PATH_INQUINAMENTO_GEOJSON_STAGING = \"./Data/Raw/Inquinamento/inquinamento_staging.geojson\"\n",
+    "with open(PATH_INQUINAMENTO_GEOJSON_STAGING, 'r') as file:\n",
+    "    geojson = json.load(file)\n",
+    "features = geojson[\"features\"]\n",
+    "\n",
+    "for feature in geojson[\"features\"]:\n",
+    "    for data in [\"pm10\", \"pm25\"]:\n",
+    "        df = pd.DataFrame(feature[\"properties\"][data])\n",
+    "        df['day'] = pd.to_datetime(df['day'])\n",
+    "        filtered_df = df[df['day'].dt.year.isin([2023])].reset_index()\n",
+    "        if len(filtered_df) > 200:\n",
+    "            media_median = filtered_df[\"median\"].mean()\n",
+    "            feature[\"properties\"][data] = media_median\n",
+    "        else:\n",
+    "            feature[\"properties\"][data] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99e129f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_INQUINAMENTO_GEOJSON_CLEAN = \"./Data/Clean/Inquinamento/inquinamento.geojson\"\n",
+    "with open(PATH_INQUINAMENTO_GEOJSON_CLEAN, 'w') as file:\n",
+    "    json.dump(geojson, file, indent=4)"
    ]
   }
  ],
