update new inquinamento

--- a/ETL_Inquinanto.ipynb
+++ b/ETL_Inquinanto.ipynb
@@ -5,7 +5,8 @@
    "id": "a66bdee8",
    "metadata": {},
    "source": [
-    "# INGESTION + ETL + DB Inquinamento"
+    "# Vecchio Inquinamento:\n",
+    "INGESTION + ETL + DB Inquinamento"
    ]
   },
   {
@@ -399,7 +400,8 @@
    "id": "e2ef12bf",
    "metadata": {},
    "source": [
-    "# Nuovo Inquinamento"
+    "# Nuovo Inquinamento\n",
+    "Scraping - ETL"
    ]
   },
   {
@@ -554,7 +556,7 @@
    "id": "ec3db842",
    "metadata": {},
    "source": [
-    "## Elaborazione dati"
+    "## ETL"
    ]
   },
   {
