Aggiunta fase di staging nel progetto. Refactoring di inquinamento dei suoi path

--- a/ETL_Inquinanto.ipynb
+++ b/ETL_Inquinanto.ipynb
@@ -5,8 +5,68 @@
    "id": "a66bdee8",
    "metadata": {},
    "source": [
-    "# Vecchio Inquinamento:\n",
-    "INGESTION + ETL + DB Inquinamento"
+    "# Inquinamento Amat:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "059d3d5f",
+   "metadata": {},
+   "source": [
+    "Inizializziamo i percorsi dei file nelle 3 fasi:\n",
+    "- Raw\n",
+    "- Staging\n",
+    "- Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c89dc7cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RAW\n",
+    "PATH_STAZIONI_RAW = \"./Data/Raw/Inquinamento/Amat/inquinamento-amat_stazioni_raw.csv\"\n",
+    "PATH_INQUINANTI_RAW = \"./Data/Raw/Inquinamento/Amat/inquinamento-amat_inquinanti_raw.csv\"\n",
+    "PATH_INGESTION_AMAT_RAW = \"./Data/Raw/Inquinamento/Amat/inquinamento-amat_ingestion_raw.json\"\n",
+    "PATH_SOGLIE_RAW = \"./Data/Raw/Inquinamento/Amat/inquinamento-amat_soglie_raw.csv\"\n",
+    "\n",
+    "# STAGING\n",
+    "PATH_BOLLETTINO_STAGING = \"./Data/Staging/Inquinamento/Amat/inquinamento-amat_bollettino_staging.csv\"\n",
+    "PATH_MISURAZIONI_STAGING = \"./Data/Staging/Inquinamento/Amat/inquinamento-amat_misurazioni_staging.csv\"\n",
+    "\n",
+    "# CLEAN\n",
+    "PATH_MISURAZIONI_CLEAN = \"./Data/Clean/Inquinamento/Amat/inquinamento-amat_misurazioni_clean.csv\"\n",
+    "PATH_BOLLETTINO_CLEAN = \"./Data/Clean/Inquinamento/Amat/inquinamento-amat_bollettino_clean.csv\"\n",
+    "PATH_STAZIONI_CLEAN = \"./Data/Clean/Inquinamento/Amat/inquinamento-amat_stazioni_clean.csv\"\n",
+    "PATH_INQUINANTI_CLEAN = \"./Data/Clean/Inquinamento/Amat/inquinamento-amat_inquinanti_clean.csv\"\n",
+    "PATH_SOGLIE_CLEAN = \"./Data/Clean/Inquinamento/Amat/inquinamento-amat_soglie_clean.csv\"\n",
+    "PATH_SQLITE_DB_CLEAN = \"./Data/Clean/Inquinamento/Amat/inquinamento-amat_sqlite-db_clean.db\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e178cd8b",
+   "metadata": {},
+   "source": [
+    "Importiamo le librerie necessarie in tutte le fasi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "af7f82f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "import json\n",
+    "\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup, Tag\n",
+    "from tqdm import tqdm\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -19,18 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4bf8a0df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping progress...: 100%|██████████| 365/365 [02:12<00:00,  3.30it/s]"
+     ]
+    }
+   ],
    "source": [
-    "from datetime import datetime, timedelta\n",
-    "import json\n",
-    "\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup, Tag\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "#Scraper functions\n",
     "\n",
     "def _get_table_row_values(row:Tag) -> dict:\n",
@@ -101,13 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d8536d65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_OUT = \"./Data/Raw/Inquinamento/inquinamento.json\"\n",
-    "with open(PATH_OUT, \"w\") as file:\n",
+    "with open(PATH_INGESTION_AMAT_RAW, \"w\") as file:\n",
     "    json.dump(db, file, indent=4)"
    ]
   },
@@ -121,28 +181,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f962b010",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import json\n",
-    "\n",
     "# Load raw files to normalizations\n",
-    "PATH_RELEVATIONS = \"./Data/Raw/Inquinamento/inquinamento.json\"\n",
-    "PATH_STATIONS = \"./Data/Raw/Inquinamento/inquinamento_stazione.csv\"\n",
-    "PATH_MOLECULE = \"./Data/Raw/Inquinamento/inquinamento_inquinante.csv\"\n",
     "\n",
-    "with open(PATH_RELEVATIONS, 'r') as file:\n",
-    "    rilevations:list = json.load(file)\n",
-    "stations = pd.read_csv(PATH_STATIONS)\n",
-    "inquinanti_df = pd.read_csv(PATH_MOLECULE)\n",
+    "with open(PATH_INGESTION_AMAT_RAW, 'r') as file:\n",
+    "    ingestion:list = json.load(file)\n",
+    "stations = pd.read_csv(PATH_STAZIONI_RAW)\n",
+    "inquinanti_df = pd.read_csv(PATH_INQUINANTI_RAW)\n",
     "\n",
     "# Start operations\n",
     "bollettino_csv = [[\"id_bollettino\", \"data\"]]\n",
     "misurazione_csv = [[\"id_bollettino\", \"id_stazione\", \"id_inquinante\", \"valore\"]]\n",
-    "for i, rilevation in enumerate(rilevations):\n",
+    "for i, rilevation in enumerate(ingestion):\n",
     "    id_bollettino = i + 1\n",
     "    bollettino_csv.append([id_bollettino, rilevation[\"Date\"]])\n",
     "    for nome_stazione, inquinanti in rilevation[\"Stations\"].items():\n",
@@ -154,15 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "cf67ac33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_BOLLETTINO_OUT = \"./Data/Raw/Inquinamento/bollettino.csv\"\n",
-    "PATH_MISURAZIONE_OUT = \"./Data/Raw/Inquinamento/misurazione.csv\"\n",
-    "pd.DataFrame(bollettino_csv).to_csv(PATH_BOLLETTINO_OUT, index=False, header=False)\n",
-    "pd.DataFrame(misurazione_csv).to_csv(PATH_MISURAZIONE_OUT, index=False, header=False)"
+    "pd.DataFrame(bollettino_csv).to_csv(PATH_BOLLETTINO_STAGING, index=False, header=False)\n",
+    "pd.DataFrame(misurazione_csv).to_csv(PATH_MISURAZIONI_STAGING, index=False, header=False)"
    ]
   },
   {
@@ -183,13 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5bf3eb56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "def lambda_valore(x):\n",
     "    valore = x.strip(\"\\n\").strip(\"\\r\").strip().replace(\",\", \".\")\n",
     "    try:\n",
@@ -201,9 +251,7 @@
     "            valore = None\n",
     "    return valore\n",
     "\n",
-    "PATH_MISURAZIONE = \"./Data/Raw/Inquinamento/misurazione.csv\"\n",
-    "\n",
-    "misurazione = pd.read_csv(PATH_MISURAZIONE)\n",
+    "misurazione = pd.read_csv(PATH_MISURAZIONI_STAGING)\n",
     "\n",
     "misurazione[\"valore\"] = misurazione[\"valore\"].apply(lambda_valore)\n",
     "misurazione = misurazione[misurazione[\"valore\"].notna()]"
@@ -211,13 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "7e52de72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_MISURAZIONE_OUT = \"./Data/Clean/Inquinamento/inquinamento_misurazione_clean.csv\"\n",
-    "misurazione.to_csv(PATH_MISURAZIONE_OUT, index=False)"
+    "misurazione.to_csv(PATH_MISURAZIONI_CLEAN, index=False)"
    ]
   },
   {
@@ -230,24 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "1755bee8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Nessuna pulizia necessaria al momento. Carico direttamente.\n",
     "\n",
-    "PATH_BOLLETTINO = \"./Data/Raw/Inquinamento/bollettino.csv\"\n",
-    "PATH_BOLLETTINO_OUT = \"./Data/Clean/Inquinamento/inquinamento_bollettino_clean.csv\"\n",
-    "pd.read_csv(PATH_BOLLETTINO).to_csv(PATH_BOLLETTINO_OUT, index=False)\n",
+    "pd.read_csv(PATH_BOLLETTINO_STAGING).to_csv(PATH_BOLLETTINO_CLEAN, index=False)\n",
     "\n",
-    "PATH_STAZIONE = \"./Data/Raw/Inquinamento/inquinamento_stazione.csv\"\n",
-    "PATH_STAZIONE_OUT = \"./Data/Clean/Inquinamento/inquinamento_stazione_clean.csv\"\n",
-    "pd.read_csv(PATH_STAZIONE).to_csv(PATH_STAZIONE_OUT, index=False)\n",
+    "pd.read_csv(PATH_STAZIONI_RAW).to_csv(PATH_STAZIONI_CLEAN, index=False)\n",
     "\n",
-    "PATH_INQUINANTE = \"./Data/Raw/Inquinamento/inquinamento_inquinante.csv\"\n",
-    "PATH_INQUINANTE_OUT = \"./Data/Clean/Inquinamento/inquinamento_inquinante_clean.csv\"\n",
-    "pd.read_csv(PATH_INQUINANTE).to_csv(PATH_INQUINANTE_OUT, index=False)"
+    "pd.read_csv(PATH_INQUINANTI_RAW).to_csv(PATH_INQUINANTI_CLEAN, index=False)\n",
+    "\n",
+    "pd.read_csv(PATH_SOGLIE_RAW).to_csv(PATH_SOGLIE_CLEAN, index=False)"
    ]
   },
   {
@@ -284,21 +327,13 @@
     "\n",
     "def execute_query_list(queries: list[str]):\n",
     "    response = []\n",
-    "    with sqlite3.connect(PATH_DB) as connection:\n",
+    "    with sqlite3.connect(PATH_SQLITE_DB_CLEAN) as connection:\n",
     "        for query in queries:\n",
     "            cursor = connection.cursor()\n",
     "            result = cursor.execute(query)\n",
     "            response.append(result.fetchall())\n",
     "            connection.commit()\n",
     "    return response\n",
-    "\n",
-    "# Set file paths\n",
-    "PATH_DB = \"./Data/Clean/Inquinamento/inquinamento.db\"\n",
-    "PATH_BOLLETTINO_CLEAN = \"./Data/Clean/Inquinamento/inquinamento_bollettino_clean.csv\"\n",
-    "PATH_STAZIONE_CLEAN = \"./Data/Clean/Inquinamento/inquinamento_stazione_clean.csv\"\n",
-    "PATH_INQUINANTE_CLEAN = \"./Data/Clean/Inquinamento/inquinamento_inquinante_clean.csv\"\n",
-    "PATH_MISURAZIONE_CLEAN = \"./Data/Clean/Inquinamento/inquinamento_misurazione_clean.csv\"\n",
-    "PATH_SOGLIA_CLEAN = \"./Data/Clean/Inquinamento/inquinamento_soglia_clean.csv\"\n",
     "\n",
     "tables = {}\n",
     "# set commands tables\n",
@@ -381,10 +416,10 @@
     "\n",
     "# set rows from df\n",
     "tables[\"bollettino\"][\"rows\"] = list(pd.read_csv(PATH_BOLLETTINO_CLEAN).itertuples(index=False, name=None))\n",
-    "tables[\"stazione\"][\"rows\"] = list(pd.read_csv(PATH_STAZIONE_CLEAN).itertuples(index=False, name=None))\n",
-    "tables[\"inquinante\"][\"rows\"] = list(pd.read_csv(PATH_INQUINANTE_CLEAN).itertuples(index=False, name=None))\n",
-    "tables[\"misurazione\"][\"rows\"] = list(pd.read_csv(PATH_MISURAZIONE_CLEAN).itertuples(index=False, name=None))\n",
-    "tables[\"soglia\"][\"rows\"] = list(pd.read_csv(PATH_SOGLIA_CLEAN).itertuples(index=False, name=None))\n",
+    "tables[\"stazione\"][\"rows\"] = list(pd.read_csv(PATH_STAZIONI_CLEAN).itertuples(index=False, name=None))\n",
+    "tables[\"inquinante\"][\"rows\"] = list(pd.read_csv(PATH_INQUINANTI_CLEAN).itertuples(index=False, name=None))\n",
+    "tables[\"misurazione\"][\"rows\"] = list(pd.read_csv(PATH_MISURAZIONI_CLEAN).itertuples(index=False, name=None))\n",
+    "tables[\"soglia\"][\"rows\"] = list(pd.read_csv(PATH_SOGLIE_CLEAN).itertuples(index=False, name=None))\n",
     "\n",
     "# Create schema query\n",
     "total_query = []\n",
@@ -400,8 +435,57 @@
    "id": "e2ef12bf",
    "metadata": {},
    "source": [
-    "# Nuovo Inquinamento\n",
-    "Scraping - ETL"
+    "# Inquinamento Airnet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4333975",
+   "metadata": {},
+   "source": [
+    "Inizializziamo i percorsi dei file nelle 3 fasi:\n",
+    "- Raw\n",
+    "- Staging\n",
+    "- Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "170c6076",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RAW\n",
+    "PATH_INQUINAMENTO_INGESTION_RAW = \"./Data/Raw/Inquinamento/Airnet/inquinamento-airnet_ingestion_raw.geojson\"\n",
+    "\n",
+    "# STAGING\n",
+    "\n",
+    "# CLEAN\n",
+    "PATH_INQUINAMENTO_INGESTION_CLEAN = \"./Data/Clean/Inquinamento/Airnet/inquinamento-airnet_ingestion_clean.geojson\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68389e2a",
+   "metadata": {},
+   "source": [
+    "Inizializziamo le librerie necessarie per tutte le fasi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7cd24381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "import requests\n",
+    "from sseclient import SSEClient\n",
+    "from tqdm import tqdm\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -422,17 +506,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "c6f47ae2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "\n",
-    "URL = \"https://airnet.waqi.info/airnet/validator/check/112273\"\n",
+    "URL = \"https://airnet.waqi.info/airnet/validator/check/112273\" # Una stazione a caso di milano\\\n",
     "risposta = requests.get(URL)\n",
     "risposta_json = risposta.json()\n",
-    "neighbors = risposta_json[\"data\"][\"neighbors\"]"
+    "neighbors = risposta_json[\"data\"][\"neighbors\"]  # Da questa riusciamo a ricavare tutte le stazioni \"vicine\""
    ]
   },
   {
@@ -445,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "78cac211",
    "metadata": {},
    "outputs": [],
@@ -492,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "f2598976",
    "metadata": {},
    "outputs": [
@@ -500,17 +582,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping progress...:   6%|▌         | 22/365 [00:32<08:28,  1.48s/it]\n",
-      "Scraping progress...: 100%|██████████| 19/19 [00:57<00:00,  3.22s/it]"
+      "Scraping progress...: 100%|██████████| 365/365 [06:57<00:00,  1.14s/it]\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "from sseclient import SSEClient\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "pbar = tqdm(total=len(geojson[\"features\"]), desc=\"Scraping progress...\")\n",
     "\n",
     "for feature in geojson[\"features\"]:\n",
@@ -536,18 +612,17 @@
    "id": "549c8257",
    "metadata": {},
    "source": [
-    "salvo il file geojson creato in Clean"
+    "salvo il file geojson creato in Raw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "548c45d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_INQUINAMENTO_GEOJSON_STAGING = \"./Data/Raw/Inquinamento/inquinamento_staging.geojson\"\n",
-    "with open(PATH_INQUINAMENTO_GEOJSON_STAGING, 'w') as file:\n",
+    "with open(PATH_INQUINAMENTO_INGESTION_RAW, 'w') as file:\n",
     "    json.dump(geojson, file, indent=4)"
    ]
   },
@@ -560,18 +635,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3d8d807",
+   "metadata": {},
+   "source": [
+    "A partire dai dati giornalieri dei 2 inquinanti (pm10 e pm25) ricaviamo gli aggregati per anno sottoforma di media delle mediane giornaliere."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "f3e11d59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "PATH_INQUINAMENTO_GEOJSON_STAGING = \"./Data/Raw/Inquinamento/inquinamento_staging.geojson\"\n",
-    "with open(PATH_INQUINAMENTO_GEOJSON_STAGING, 'r') as file:\n",
+    "with open(PATH_INQUINAMENTO_INGESTION_RAW, 'r') as file:\n",
     "    geojson = json.load(file)\n",
     "features = geojson[\"features\"]\n",
     "\n",
@@ -588,14 +666,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d84bf41d",
+   "metadata": {},
+   "source": [
+    "Salviamo su Clean"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "99e129f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_INQUINAMENTO_GEOJSON_CLEAN = \"./Data/Clean/Inquinamento/inquinamento.geojson\"\n",
-    "with open(PATH_INQUINAMENTO_GEOJSON_CLEAN, 'w') as file:\n",
+    "with open(PATH_INQUINAMENTO_INGESTION_CLEAN, 'w') as file:\n",
     "    json.dump(geojson, file, indent=4)"
    ]
   }
