--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "af7f82f9",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c89dc7cd",
    "metadata": {},
    "outputs": [],
@@ -272,6 +272,95 @@
     "pd.read_csv(PATH_INQUINANTI_RAW).to_csv(PATH_INQUINANTI_CLEAN, index=False)\n",
     "\n",
     "pd.read_csv(PATH_SOGLIE_RAW).to_csv(PATH_SOGLIE_CLEAN, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb664d80",
+   "metadata": {},
+   "source": [
+    "Creazione Geojson con medie annue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec1dfc77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tabella_media_inquinanti(id_inquinante:int, nome_valore:str) -> pd.DataFrame:\n",
+    "    \n",
+    "    inquinanti = pd.read_csv(PATH_INQUINANTI_CLEAN)\n",
+    "    stazioni = pd.read_csv(PATH_STAZIONI_CLEAN)\n",
+    "    misurazioni = pd.read_csv(PATH_MISURAZIONI_CLEAN)\n",
+    "    misurazioni = misurazioni.rename(columns={\"valore\": nome_valore})\n",
+    "    bollettino = pd.read_csv(PATH_BOLLETTINO_CLEAN)\n",
+    "    bollettino[\"data\"] = pd.to_datetime(bollettino[\"data\"])\n",
+    "\n",
+    "    df = misurazioni[misurazioni[\"id_inquinante\"] == id_inquinante]\n",
+    "    df = df.merge(inquinanti, on=\"id_inquinante\", how=\"left\")\n",
+    "    df = df.merge(bollettino, on=\"id_bollettino\", how=\"left\")\n",
+    "    df = df.merge(stazioni, on=\"id_stazione\", how=\"left\", suffixes=(\"_pm10\", \"_stazione\"))\n",
+    "    colonne = [nome_valore, \"data\", \"simbolo\", \"nome_stazione\", \"latitude\", \"longitute\"]\n",
+    "    df = df[colonne]\n",
+    "    \n",
+    "    print(df.tail())    # Perdo viale liguria da fixare\n",
+    "    df = df.groupby(\"nome_stazione\").mean(\"valore\").reset_index()\n",
+    "    print(df.head())\n",
+    "    return df\n",
+    "\n",
+    "df_pm10 = get_tabella_media_inquinanti(2, \"valore_pm10\")\n",
+    "df_pm25 = get_tabella_media_inquinanti(3, \"valore_pm25\")\n",
+    "\n",
+    "final_df = df_pm10.merge(df_pm25[[\"nome_stazione\", \"valore_pm25\"]], on=\"nome_stazione\", how=\"left\")\n",
+    "final_df = final_df[[\"valore_pm10\", \"valore_pm25\", \"nome_stazione\", \"latitude\", \"longitute\"]]\n",
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4abafd57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geojson = {\n",
+    "    \"type\": \"FeatureCollection\",\n",
+    "    \"name\": \"\",\n",
+    "    \"crs\": {\n",
+    "        \"type\": \"name\",\n",
+    "        \"properties\": {\n",
+    "            \"name\": \"urn:ogc:def:crs:EPSG::6707\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"features\": []\n",
+    "}\n",
+    "geojson[\"name\"] = \"inquinamento-amat\"\n",
+    "for i in final_df.index:\n",
+    "    feature = {\n",
+    "        \"type\": \"Feature\",\n",
+    "        \"properties\": {},\n",
+    "        \"geometry\": {\n",
+    "            \"type\": \"\",\n",
+    "            \"coordinates\": []\n",
+    "            }\n",
+    "        }\n",
+    "    for j in final_df.columns:\n",
+    "        feature[\"properties\"][j] = None if pd.isna(final_df.at[i, j]) else final_df.at[i, j]\n",
+    "    feature[\"geometry\"][\"coordinates\"] = [final_df.at[i, \"longitute\"], final_df.at[i, \"latitude\"]]\n",
+    "    geojson[\"features\"].append(feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "10feaffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../Data/Clean/Inquinamento/Amat/inquinamento-amat_media_clean.geojson\", 'w') as file:\n",
+    "    json.dump(geojson, file, indent=4)"
    ]
   },
   {
