--- a/Scripts/Info_bici.ipynb
+++ b/Scripts/Info_bici.ipynb
@@ -33,8 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_CICLABILI_RAW = \"./Data/Raw/Info_bici/bike_ciclabili_raw.geojson\"\n",
-    "PATH_CICLABILI_CLEAN = \"./Data/Clean/Info_bici/bike_ciclabili_clean.geojson\""
+    "PATH_CICLABILI_RAW = \"../Data/Raw/Info_bici/bike_ciclabili_raw.geojson\"\n",
+    "PATH_CICLABILI_CLEAN = \"../Data/Clean/Info_bici/bike_ciclabili_clean.geojson\""
    ]
   },
   {
@@ -118,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_BIKEMI_RAW = './Data/Raw/Info_bici/bikemi_stazioni_raw.csv'\n",
-    "PATH_BIKEMI_CLEAN = \"./Data/Clean/Info_bici/bikemi_stazioni_clean.geojson\""
+    "PATH_BIKEMI_RAW = '../Data/Raw/Info_bici/bikemi_stazioni_raw.csv'\n",
+    "PATH_BIKEMI_CLEAN = \"../Data/Clean/Info_bici/bikemi_stazioni_clean.geojson\""
    ]
   },
   {
